# ToyCryptoLibrary

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  ci_cd.yml
include/: tcl.h
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  tcl.h
lib/sources/: CMakeLists.txt  aes_decrypt_ecb_128_aesni_iterative.c  aes_decrypt_ecb_128_aesni_pipelined.c  aes_decrypt_ecb_128_noop.c  aes_decrypt_ecb_128_pure_c.c  aes_defines.h  aes_encrypt_ecb_128_aesni_iterative.c  aes_encrypt_ecb_128_aesni_pipelined.c  aes_encrypt_ecb_128_noop.c  aes_encrypt_ecb_128_pure_c.c  aes_expand_key_128_noop.c  aes_expand_key_noop.c  aes_lookup_tables.c  aes_lookup_tables.h  aes_routine_noop.c  aes_routine_noop.h
perf/: CMakeLists.txt
perf/sources/: CMakeLists.txt  main.cpp  p_aes_ecb.cpp  p_aes_ecb_128_noop.cpp  tests.h
scripts/: build_all.sh  cleanup.sh  collect_binaries.sh  run_alg_tests.sh  run_perf_tests.sh
sources/: version.c
test/: CMakeLists.txt
test/sources/: CMakeLists.txt  main.c  main.cpp  t_aes_decrypt_ecb.cpp  t_aes_encrypt_ecb.cpp  t_aes_key_expansion.cpp  test_common.cpp  test_common.h  tests.h
test/testlib/: CMakeLists.txt
tests/: t_version.cpp
